force-app/main/default/objects/Journal__c/Journal__c.object-meta.xml
<CustomObject>
    <label>Journal</label>
    <nameField>
        <label>Journal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>