force-app/main/default/objects/Journal__c/fields/Affirmations__c.field-meta.xml
<CustomField>
    <fullName>Affirmations__c</fullName>
    <label>Affirmations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>