force-app/main/default/objects/Journal__c/fields/Behaviors__c.field-meta.xml
<CustomField>
    <fullName>Behaviors__c</fullName>
    <label>Behaviors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>