force-app/main/default/objects/Journal__c/fields/Evaluations__c.field-meta.xml
<CustomField>
    <fullName>Evaluations__c</fullName>
    <label>Evaluations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>