force-app/main/default/objects/Journal__c/fields/Goals_and_Gratitude__c.field-meta.xml
<CustomField>
    <fullName>Goals_and_Gratitude__c</fullName>
    <label>Goals and Gratitude</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>