force-app/main/default/objects/Journal__c/fields/Lesson_Learn__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Learn__c</fullName>
    <label>Lesson Learn</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>