force-app/main/default/objects/Journal__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&apos;https://bookingninjas.my.salesforce.com/&apos;, &apos;https://bookingninjas.my.salesforce.com/&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>