force-app/main/default/objects/Journal__c/fields/Successes__c.field-meta.xml
<CustomField>
    <fullName>Successes__c</fullName>
    <label>Successes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>